--- a/Usuario_API/appsettings.json
+++ b/Usuario_API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server= PC_ROBERTO;DataBase=UsuarioAPI;Authentication=Active Directory Integrated;encrypt=yes;trustservercertificate=true"
+  }
 }
